--- a/frontend/src/modules/room/components/room-layout/room-layout.component.html
+++ b/frontend/src/modules/room/components/room-layout/room-layout.component.html
@@ -3,6 +3,7 @@
         <div class="block-content">
             <ob-room-list-container></ob-room-list-container>
             <ob-button-plate
+                *ngIf="(userRole$ | async) === role.ADMIN"
                 label="Create room"
                 description="Create new room"
                 (click)="handleCreateRoom()"
