--- a/frontend/src/modules/place/components/place-layout/place-layout.component.html
+++ b/frontend/src/modules/place/components/place-layout/place-layout.component.html
@@ -7,6 +7,7 @@
                 label="Create place"
                 description="Create new place"
                 (click)="handleCreatePlace()"
+                *ngIf="(userRole$ | async) === role.ADMIN"
             >
                 <ng-container icon>
                     <ob-place-icon></ob-place-icon>
