implemented booking validation

--- a/frontend/src/modules/place-booking/components/pb-form/pb-form.component.css
+++ b/frontend/src/modules/place-booking/components/pb-form/pb-form.component.css
@@ -1,5 +1,11 @@
 .grid {
     display: grid;
+    grid-template-rows: max-content 2rem;
+    grid-gap: 0.5rem;
+}
+
+.form {
+    display: grid;
     grid-auto-flow: column;
     grid-gap: 1rem;
     align-items: end;
