--- a/frontend/src/modules/shared/components/error/error.component.css
+++ b/frontend/src/modules/shared/components/error/error.component.css
@@ -6,7 +6,7 @@
 }
 
 .icon-container {
-    height: 1.2rem;
-    width: 1.2rem;
+    height: 100%;
+    width: 1.4rem;
     color: var(--color-red);
 }
