implemented "Profile" page, added path to router config, added actions, effect, fixed tests

--- a/frontend/src/modules/app/components/user-menu/user-menu.component.html
+++ b/frontend/src/modules/app/components/user-menu/user-menu.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="list">
-        <div class="item">Edit profile</div>
+        <div class="item" (click)="handleOpenProfile()">Edit profile</div>
         <div class="item" (click)="handleLogout()">Logout</div>
     </div>
 </ob-popup>
