--- a/frontend/src/modules/room/components/room-info/room-info.component.html
+++ b/frontend/src/modules/room/components/room-info/room-info.component.html
@@ -3,7 +3,7 @@
 
     <ob-section name="Metrics">
         <div>Total places: {{ room.places.length }}</div>
-        <div>Used places at the moment: {{ usedPlaces }}</div>
+        <!--        <div>Used places at the moment: {{ usedPlaces }}</div>-->
         <div>Available places for booking: {{ availablePlacesForBooking }}</div>
     </ob-section>
 
